--- a/src/index.css
+++ b/src/index.css
@@ -64,9 +64,8 @@ body{
 .featured-services .row {
     display: flex;
     padding:  50px 0;
-    box-sizing: border-box;
     margin: 0 5%;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 .featured-services {
     --cyan-color: #0dcaf0;
@@ -78,12 +77,10 @@ body{
   .featured-services .service-item {
     background-color: var(--surface-color);
     box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
-    height: 100%;
     padding: 40px 30px;
     text-align: center;
     transition: 0.3s;
     border-radius: 5px;
-    border: 1px solid transparent;
   }
   
   .featured-services .service-item .icon {
@@ -204,9 +201,13 @@ body{
 /*--------------------------------------------------------------
 # Why Us Section
 --------------------------------------------------------------*/
-.why-us {
-    border: 1px solid red;
+
+  
+  .why-us-section{
+    display: flex;
+    flex-wrap: wrap;
   }
+
 .why-us .card {
     background-color: var(--surface-color);
     color: var(--default-color);
@@ -214,6 +215,9 @@ body{
     padding: 40px;
     margin: -1px;
     border-radius: 0;
+    width: calc(100% / 3);
+    min-width: 50%;
+    border: 1px solid #2A966F;
   }
   
   .why-us .card span {
