--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,41 @@
     border-radius: 50%;
     z-index: -1;
   }
+
+.gradient-hover:hover {
+  background: linear-gradient(111.4deg, rgb(67, 222, 67) 18.4%, rgb(0, 232, 237) 100.2%);
+  color: white;
+}
+
+.hero::after {
+  content: '';
+  position: absolute;
+  bottom: -80px; /* Position it at the bottom of the parent */
+  left: 50%;
+  transform: translateX(-50%); /* Center horizontally */
+  width: 200%;
+  background-image: linear-gradient(to bottom, rgb(228, 228, 228) 70%, #134737 30%);
+  height: 70%;
+  border-radius: 50%;
+  z-index: -1; /* Ensure it’s behind other content */
+}
+.service-arc::after {
+  content: '';
+  position: absolute;
+  bottom: -50px; /* Position it at the bottom of the parent */
+  left: 50%;
+  transform: translateX(-50%); /* Center horizontally */
+  width: 200%;
+background-color: #e8f9f1;
+  height: 70%;
+  border-radius: 50%;
+  z-index: -1; /* Ensure it’s behind other content */
+}
+
+.clipped {
+  width: 300px;
+  height: 300px;
+  background-image: url('/images/cta-bg.jpg');
+  background-size: cover;
+  clip-path: ellipse(50% 30% at 50% 50%);
+}
