--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .page-title.arc-bottom::after {
-    content: '';
-    position: absolute;
-    bottom: -30px; 
-    left: 50%;
-    transform: translateX(-50%);
-    width: 200%;
-    height: 150%; 
-    background-color: inherit;
-    border-radius: 50%;
-    z-index: -1;
+  content: '';
+  position: absolute;
+  bottom: -80px; /* Position it at the bottom of the parent */
+  left: 50%;
+  transform: translateX(-50%); /* Center horizontally */
+  width: 200%;
+  background-color: inherit;
+  height: 70%;
+  border-radius: 50%;
+  z-index: -1; /* Ensure it’s behind other content */
   }
 
 .gradient-hover:hover {
@@ -23,7 +23,7 @@
   left: 50%;
   transform: translateX(-50%); /* Center horizontally */
   width: 200%;
-  background-image: linear-gradient(to bottom, rgb(228, 228, 228) 70%, #134737 30%);
+  background-image: linear-gradient(to bottom, rgba(145, 145, 145, 0) 70%, #134737 30%);
   height: 70%;
   border-radius: 50%;
   z-index: -1; /* Ensure it’s behind other content */
