before meeting 3 am

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,14 @@ background-color: #e8f9f1;
   background-size: cover;
   clip-path: ellipse(50% 30% at 50% 50%);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
