--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,13 @@ background-color: #e8f9f1;
   z-index: -1; /* Ensure it’s behind other content */
 }
 
-.clipped {
+/* .clipped {
   width: 300px;
   height: 300px;
   background-image: url('/images/cta-bg.jpg');
   background-size: cover;
   clip-path: ellipse(50% 30% at 50% 50%);
-}
+} */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
