--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
 @tailwind utilities;
 
 body{
-    background-color: #f1f1f1;
-    background-color: #ffffff;
+    max-width: 100vw;
+    background-color: #f2f2f2;
+    /* background-color: #ffffff; */
     overflow-x: hidden;
 }
 
