--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@
 @tailwind utilities;
 
 body{
-    max-width: 100vw;
-    background-color: #f2f2f2;
-    /* background-color: #ffffff; */
+    background-color: #f1f1f1;
+    background-color: #ffffff;
     overflow-x: hidden;
 }
 
@@ -19,6 +18,7 @@ body{
     text-align: center;
     position: relative;
     color: white;
+    color: #144835;
   }
 
   
