--- a/src/App.css
+++ b/src/App.css
@@ -57,14 +57,6 @@ background-color: #e8f9f1;
   z-index: -1; /* Ensure it’s behind other content */
 }
 
-/* .clipped {
-  width: 300px;
-  height: 300px;
-  background-image: url('/images/cta-bg.jpg');
-  background-size: cover;
-  clip-path: ellipse(50% 30% at 50% 50%);
-} */
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
@@ -74,4 +66,40 @@ background-color: #e8f9f1;
 .hide-scrollbar {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.ninja-header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(20, 72, 53, .3); /* Semi-transparent overlay */
+  z-index: 1; /* Ensure the overlay is behind the content */
+}
+
+
+.subscribe-form::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/images/bg.png');
+  z-index: -1; /* Ensure it’s behind other content */
+  overflow: hidden;
+
+}
+
+.subscribe-form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(20, 72, 53, .9); /* Semi-transparent overlay */
+  z-index: 1; /* Ensure the overlay is behind the content */
 }
