--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ body{
   .page-title h1 {
     font-weight: 700;
     margin-bottom: 10px;
-
   }
   
   .page-title .breadcrumbs ol {
@@ -242,6 +241,7 @@ body{
   padding: 120px 0;
   position: relative;
   clip-path: inset(0);
+  margin-top: 15vh;
 }
 
 .call-to-action .container {
@@ -346,4 +346,62 @@ body{
   padding-bottom: 0;
   visibility: visible;
   opacity: 1;
+}
+
+
+
+.spotlight-item {
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  margin: 0 10px; /* Space between items */
+  text-align: center;
+  display: flex;  
+  width: 50%;
+  background-color: white;
+  box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 10px;
+  gap: 50px;
+}
+
+.spotlight-item img {
+  max-width: 50%;
+  border-radius: 10px;
+}
+
+.center {
+  transform: scale(1.2); /* Scale up the center item and its width */
+  opacity: 1;
+  z-index: 100;
+}
+
+.spotlight-item:not(.center) {
+  opacity: 0.7; /* Dim side items */
+}
+
+.carousel-button {
+  margin: 10px;
+  padding: 10px 15px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.carousel-button:hover {
+  background-color: #0056b3;
+}
+
+.prev {
+  position: absolute;
+  left: 20%;
+  top: 50%;
+}
+
+.next {
+  position: absolute;
+  right: 20%;
+  top: 50%;
 }
