--- a/src/index.css
+++ b/src/index.css
@@ -349,7 +349,6 @@ body{
 }
 
 
-
 .spotlight-item {
   transition: transform 0.3s ease, opacity 0.3s ease;
   margin: 0 10px; /* Space between items */
@@ -365,43 +364,93 @@ body{
   gap: 50px;
 }
 
+
+.spotlight-item:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
 .spotlight-item img {
   max-width: 50%;
   border-radius: 10px;
+  aspect-ratio: 1/1;
 }
 
 .center {
   transform: scale(1.2); /* Scale up the center item and its width */
   opacity: 1;
-  z-index: 100;
+  z-index: 10;
 }
 
+@media screen and (max-width: 900px) {
+  .side {
+    display: none;
+  }
+  
+}
 .spotlight-item:not(.center) {
-  opacity: 0.7; /* Dim side items */
+  opacity: 0.5; /* Dim side items */
 }
 
 .carousel-button {
   margin: 10px;
   padding: 10px 15px;
   cursor: pointer;
-  background-color: #007bff;
-  color: white;
+  background-color: #007bff00;
+  color: rgba(13, 66, 68, 0);
   border: none;
+  align-self: center;
   border-radius: 5px;
+  font-size: 100px;
+  height: 100%;
+  width: 50%;
 }
 
-.carousel-button:hover {
-  background-color: #0056b3;
-}
 
 .prev {
   position: absolute;
-  left: 20%;
-  top: 50%;
+  left: 0%;
+
 }
 
 .next {
   position: absolute;
-  right: 20%;
-  top: 50%;
+  right: 0%;
+}
+
+
+.card-container {
+  perspective: 1000px;
+  height: 250px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card-container:hover .card {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100% ;
+  backface-visibility: hidden;
+}
+
+.card-back {
+
+  transform: rotateY(180deg);
+}
+
+.bg-gap {
+  background-image: url('/images/star-bg.png');
+  background-repeat: repeat;
+  background-size: 100px 100px; /* Adjust the size to create a gap */
+  background-position: center;
 }
