--- a/src/App.css
+++ b/src/App.css
@@ -76,11 +76,12 @@
   left: 50%;
   top: 0;
   transform: translateX(-50%); /* Center horizontally */
-  width:200%;
+  width:100%;
   height: 100%;
-  background-image: url('/images/ninja2.jpg');
-
+  background-image: url('/images/hero-bg.png');
+  z-index: 2;
   background-size: cover;
+  background-position: bottom;
   background-repeat: no-repeat;
   z-index: -1; /* Ensure it’s behind other content */
   clip-path: ellipse(80% 100% at 50% 0%); /* Curve at the bottom */
@@ -96,8 +97,8 @@
   transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
   width: 200%;
   height: 100%;
-  background-color: rgba(20, 72, 53, .4); /* Semi-transparent overlay */
-  z-index: 1; /* Ensure it’s on top of the red background but behind other content */
+  background-color: #0b221a;
+  z-index: -1; /* Ensure it’s on top of the red background but behind other content */
   clip-path: ellipse(80% 100% at 50% 100%);
 }
 
