--- a/src/index.css
+++ b/src/index.css
@@ -390,16 +390,30 @@ body{
   margin: 10px;
   padding: 10px 15px;
   cursor: pointer;
-  background-color: #007bff00;
-  color: rgba(13, 66, 68, 0);
+
   border: none;
   align-self: center;
   border-radius: 5px;
   font-size: 100px;
-  height: 100%;
-  width: 50%;
+  z-index: 100;
+  top: 50%;
 }
 
+.carousel-button:hover {
+  background-color: #f1f1f1;
+  transition: 0.3s;
+  transform: scale(1.1);
+  z-index: 100;
+  border-radius: 50%;
+  top: 50%;
+  cursor: pointer;
+  border: none;
+  align-self: center;
+  border-radius: 50%;
+  font-size: 100px;
+  z-index: 100;
+  top: 50%;
+}
 
 .prev {
   position: absolute;
