--- a/src/index.css
+++ b/src/index.css
@@ -52,77 +52,6 @@ body{
 /* --------------------------------------------------------------
 # Featured Services Section
 --------------------------------------------------------------*/
-/* .featured-services .row {
-    display: flex;
-    padding:  50px 0;
-    margin: 0 5%;
-    gap: 0.5rem;
-}
-
-  
-  .featured-services .service-item {
-    background-color: var(--surface-color);
-    box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
-    padding: 40px 30px;
-    text-align: center;
-    transition: 0.3s;
-    border-radius: 5px;
-  }
-  
-  .featured-services .service-item .icon {
-    margin: 0 auto;
-    width: 64px;
-    height: 64px;
-    display: flex;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    transition: ease-in-out 0.3s;
-    position: relative;
-  }
-  
-  .featured-services .service-item .icon i {
-    font-size: 28px;
-    transition: 0.5s;
-    position: relative;
-  }
-  
-  .featured-services .service-item h3 {
-    font-weight: 700;
-    margin: 10px 0 15px 0;
-    font-size: 22px;
-  }
-  
-  .featured-services .service-item p {
-    line-height: 24px;
-    font-size: 14px;
-    margin-bottom: 0;
-  }
-  
-  .featured-services .service-item:hover {
-    box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.1);
-  }
-  
-  .featured-services .service-item.item-cyan .icon {
-    background-color: color-mix(in srgb, var(--cyan-color) 10%, white 95%);
-  }
-  
-  .featured-services .service-item.item-cyan .icon i {
-    color: var(--cyan-color);
-  }
-  
-  .featured-services .service-item.item-cyan:hover {
-    border-color: var(--cyan-color);
-  }
-  
-  .featured-services .service-item.item-cyan:hover .icon {
-    background-color: #f525094e;
-  }
-  
-  .featured-services .service-item.item-cyan:hover .icon i {
-    color: var(--contrast-color);
-  }
-  */
   .featured-services {
     --cyan-color: #0dcaf0;
     --orange-color: #fd7e14;
@@ -137,8 +66,6 @@ body{
     color:#f52509;
   }
   
-
-  
   .featured-services .service-item.item-orange:hover .icon {
     background-color: #f525092f;
   }
@@ -146,47 +73,6 @@ body{
   .featured-services .service-item.item-orange:hover .icon i {
     color: #f52509;
   }
-   /*
-  .featured-services .service-item.item-teal .icon {
-    background-color: color-mix(in srgb, var(--teal-color) 10%, white 95%);
-  }
-  
-  .featured-services .service-item.item-teal .icon i {
-    color: var(--teal-color);
-  }
-  
-  .featured-services .service-item.item-teal:hover {
-    border-color: var(--teal-color);
-  }
-  
-  .featured-services .service-item.item-teal:hover .icon {
-    background-color: var(--teal-color);
-  }
-  
-  .featured-services .service-item.item-teal:hover .icon i {
-    color: var(--contrast-color);
-  }
-  
-  .featured-services .service-item.item-red .icon {
-    background-color: color-mix(in srgb, var(--red-color) 10%, white 95%);
-  }
-  
-  .featured-services .service-item.item-red .icon i {
-    color: var(--red-color);
-  }
-  
-  .featured-services .service-item.item-red:hover {
-    border-color: var(--red-color);
-  }
-  
-  .featured-services .service-item.item-red:hover .icon {
-    background-color: var(--red-color);
-  }
-  
-  .featured-services .service-item.item-red:hover .icon i {
-    color: var(--contrast-color);
-  }
-   */
    .service-item .icon svg {
     width: 50px;
     height: 50px;
@@ -238,25 +124,15 @@ body{
 # Call To Action Section
 --------------------------------------------------------------*/
 .call-to-action {
-  padding: 120px 0;
+  padding: 130px 0;
   position: relative;
-  clip-path: inset(0);
+  clip-path: inset(1);
 }
 
 .call-to-action .container {
   position: relative;
   z-index: 3;
 }
-
-/* .call-to-action h3 {
-  color: var(--default-color);
-  font-size: 28px;
-  font-weight: 700;
-}
-
-.call-to-action p {
-  color: var(--default-color);
-} */
 
 .call-to-action .cta-btn {
   font-weight: 500;
@@ -268,6 +144,18 @@ body{
   transition: 0.5s;
   margin: 10px;
   border: 2px solid black;
+}
+
+#call-to-action::after {
+  border: none;
+  content: '';
+  position: absolute;
+  top:-2px;
+  left: 0;
+  width: 100%;
+  height: 125px; /* Adjust the height as needed */
+  background: #ffffff; /* Adjust the background color as needed */
+  clip-path: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%); shape-outside: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%);
 }
 
 /*--------------------------------------------------------------
@@ -453,19 +341,3 @@ body{
 }
 
 
-#call-to-action {
-  position: relative;
-  overflow: hidden;
-}
-
-#call-to-action::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100px; /* Adjust the height as needed */
-  background: #ffffff; /* Adjust the background color as needed */
-  clip-path: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%); shape-outside: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%);
-  z-index: -1; /* Ensure it’s behind other content */
-}
