--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body{
     overflow-x: hidden;
 }
 
+@media screen and (max-width:768px){
+    body{
+        overflow-x: hidden;
+    }
+}
   /*--------------------------------------------------------------
   # Global Page Titles & Breadcrumbs
   --------------------------------------------------------------*/
